; ModuleID = '/home/carl/AnghaBench/git/extr_json-writer.c_jw_object_double.c'
source_filename = "/home/carl/AnghaBench/git/extr_json-writer.c_jw_object_double.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.json_writer = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @jw_object_double(%struct.json_writer* %0, i8* %1, i32 %2, double %3) #0 {
  %5 = alloca %struct.json_writer*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca double, align 8
  store %struct.json_writer* %0, %struct.json_writer** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store double %3, double* %8, align 8
  %9 = load %struct.json_writer*, %struct.json_writer** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @object_common(%struct.json_writer* %9, i8* %10)
  %12 = load %struct.json_writer*, %struct.json_writer** %5, align 8
  %13 = load i32, i32* %7, align 4
  %14 = load double, double* %8, align 8
  %15 = call i32 @fmt_double(%struct.json_writer* %12, i32 %13, double %14)
  ret void
}

declare dso_local i32 @object_common(%struct.json_writer*, i8*) #1

declare dso_local i32 @fmt_double(%struct.json_writer*, i32, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
